修改：     db.sqlite3 	修改：     menu/menu.json 	修改：     message_receive/views.py 	修改：     scgysu_wechat/settings.py 	修改：     scgysu_wechat/urls.py 	修改：     scgysu_wechat/wsgi.py 	修改：     uwsgi.ini

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,6 +3,7 @@ socket = /path/of/project/scgysu_wechat.sock
 chmod-socket = 666
 master = Ture
 chdir = /path/of/project
-module = mysite.wsgi:application
+module = scgysu_wechat.wsgi:application
+plugins = python
 pidfile = /tmp/project-master.pid
 vacuum = Ture
