modified:   access_token.py 	modified:   db.sqlite3 	modified:   menu/menu.json 	modified:   menu/menu.py 	modified:   message_receive/urls.py 	modified:   message_receive/views.py 	modified:   mis/lesson_robber.py 	new file:   mis/templates/mis/.index.html.swp 	modified:   mis/templates/mis/index.html 	modified:   review/admin.py 	modified:   review/models.py 	modified:   review/views.py 	modified:   scgysu_wechat/settings.py 	modified:   scgysu_wechat/urls.py 	new file:   static/admin/css/base.css 	new file:   static/admin/css/changelists.css 	new file:   static/admin/css/dashboard.css 	new file:   static/admin/css/fonts.css 	new file:   static/admin/css/forms.css 	new file:   static/admin/css/login.css 	new file:   static/admin/css/rtl.css 	new file:   static/admin/css/widgets.css 	new file:   static/admin/fonts/LICENSE.txt 	new file:   static/admin/fonts/README.txt 	new file:   static/admin/fonts/Roboto-Bold-webfont.woff 	new file:   static/admin/fonts/Roboto-Light-webfont.woff 	new file:   static/admin/fonts/Roboto-Regular-webfont.woff 	new file:   static/admin/img/LICENSE 	new file:   static/admin/img/README.txt 	new file:   static/admin/img/calendar-icons.svg 	new file:   static/admin/img/gis/move_vertex_off.svg 	new file:   static/admin/img/gis/move_vertex_on.svg 	new file:   static/admin/img/icon-addlink.svg 	new file:   static/admin/img/icon-alert.svg 	new file:   static/admin/img/icon-calendar.svg 	new file:   static/admin/img/icon-changelink.svg 	new file:   static/admin/img/icon-clock.svg 	new file:   static/admin/img/icon-deletelink.svg 	new file:   static/admin/img/icon-no.svg 	new file:   static/admin/img/icon-unknown-alt.svg 	new file:   static/admin/img/icon-unknown.svg 	new file:   static/admin/img/icon-yes.svg 	new file:   static/admin/img/inline-delete.svg 	new file:   static/admin/img/search.svg 	new file:   static/admin/img/selector-icons.svg 	new file:   static/admin/img/sorting-icons.svg 	new file:   static/admin/img/tooltag-add.svg 	new fil

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
-socket = /path/of/project/scgysu_wechat.sock
+socket = /srv/scgysu_wechat/wechat.sock
 chmod-socket = 666
 master = Ture
-chdir = /path/of/project
+chdir = /srv/scgysu_wechat
 module = scgysu_wechat.wsgi:application
 plugins = python
-pidfile = /tmp/project-master.pid
+pidfile = /tmp/scgysu-wechat-master.pid
 vacuum = Ture
