修改：     db.sqlite3 	新文件：   id_associated/migrations/0001_initial.py 	修改：     id_associated/models.py 	新文件：   id_associated/templates/id_associated/bind-succeeded.html 	新文件：   id_associated/templates/id_associated/binded.html 	新文件：   id_associated/templates/id_associated/binding.html 	新文件：   id_associated/templates/id_associated/unbind-succeeded.html 	新文件：   id_associated/templates/id_associated/unbinding.html 	修改：     id_associated/urls.py 	修改：     id_associated/views.py 	修改：     message_receive/urls.py 	修改：     mis/urls.py 	新文件：   review/migrations/0003_auto_20160721_1433.py 	修改：     review/urls.py 	修改：     scgysu_wechat/settings.py 	新文件：   static/id_associated/scgy_logo.jpg

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-socket = /srv/scgysu_wechat/wechat.sock
+socket = /home/tur/scgysu/scgysu_wechat/wechat.sock
 chmod-socket = 666
 master = Ture
-chdir = /srv/scgysu_wechat
+chdir = /home/tur/scgysu/scgysu_wechat
 module = scgysu_wechat.wsgi:application
 plugins = python
 pidfile = /tmp/scgysu-wechat-master.pid
